# engnr-nsu-cpp-2021

2/: CMakeLists.txt
2/src/: CMakeLists.txt  commands.cpp  commands.h  main.cpp
